Добавление стилей из исходной книги

--- a/App.config
+++ b/App.config
@@ -6,7 +6,20 @@
   <appSettings>
     <add key="sourcePath" value="C:\Users\Public\excelList" />
     <add key="destinationPath" value="C:\Users\Public\outputExcel" />
-  <add key="configFilePath" value="C:\Users\Denis.Shipelov\source\repos\RepCol_2\bin\Debug\ReportCollector.exe.config" />
+    <add key="configFilePath" value="C:\Users\Denis.Shipelov\source\repos\RepCol_2\bin\Debug\ReportCollector.exe.config" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.windows.forms jitDebugging="true" />
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
